ch4 insert text references to figures and tables

--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -64,13 +64,7 @@ Using the R package ewastools [@heiss2018], DNA methylation intensity measuremen
 
 ## Results
 
-There was variability in estimated genotype mixing between studies (Figure 1a), however a proportion of datasets showed a number of chorionic villi samples with a high P(outlier) value (Table 1).
-Due to the proximity of maternal tissue during chorionic villi sampling, we hypothesize that much of the observed genotype mixing can be explained by the presence of maternal cells, either from sample processing or from biological processes such as inflammation.
-We noted the number of samples with P(outlier) values greater than 0.15 for each dataset in Table 1.
-However, other factors can contribute to high P(outlier) values, such as data quality and non-maternal sample contamination (e.g. unintentional mixing of placental samples).
-We found that samples that failed 1 or more Illumina data quality control checks were overall generally low (Figure 1B), which is unsurprising given that most studies perform at minimum some baseline data processing and quality control.
-However, in 3 out of 13 datasets, samples that failed control checks showed statistically significantly higher P(outlier) values (Supplementary Figure 1A), and in two datasets, 5 and 6, the number of samples that failed at least one control check was a large proportion of the dataset -- 6/6 (100%) for dataset 5, and 32/88 (36%) (Table 2).
-However, we note that Illumina data quality control checks are fairly specific and each of 27 control checks measures a different aspect of DNAm signal quality; as others have also noted, even if samples fail some Illumina controls, other measures of DNAm data quality can appear fine [@heiss2018].
+There was variability in estimated genotype mixing between studies (Figure \@ref(fig:ch4fig1)A), however a proportion of datasets showed a number of chorionic villi samples with a high P(outlier) value (Table \@ref(tab:ch4tab1)). Due to the proximity of maternal tissue during chorionic villi sampling, we hypothesize that much of the observed genotype mixing can be explained by the presence of maternal cells, either from sample processing or from biological processes such as inflammation. We noted the number of samples with P(outlier) values greater than 0.15 for each dataset in Table \@ref(tab:ch4tab1). However, other factors can contribute to high P(outlier) values, such as data quality and non-maternal sample contamination (e.g. unintentional mixing of placental samples). We found that samples that failed 1 or more Illumina data quality control checks were overall generally low (Figure \@ref(fig:ch4fig1)B), which is unsurprising given that most studies perform at minimum some baseline data processing and quality control. However, in 3 out of 13 datasets, samples that failed control checks showed statistically significantly higher P(outlier) values (Figure \@ref(fig:figc1)A), and in two datasets, 5 and 6, the number of samples that failed at least one control check was a large proportion of the dataset -- 6/6 (100%) for dataset 5, and 32/88 (36%) (Table \@ref(tab:ch4tab2)). However, we note that Illumina data quality control checks are fairly specific and each of 27 control checks measures a different aspect of DNAm signal quality; as others have also noted, even if samples fail some Illumina controls, other measures of DNAm data quality can appear fine [@heiss2018].
 However, samples that failed quality control only accounted for a proportion of samples with high P(outlier) values, leaving the possibility that genotype mixing could be occurring in the remainder of the samples.
 
 <!-- INSERT FIGURE 1 -->
@@ -94,12 +88,12 @@ kableExtra::kbl(
 
 To determine what proportion of high P(outlier) placental chorionic villi samples were contaminated with maternal cells, we performed several other analyses based on DNAm variation.
 
-Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure 2A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Supplementary Figure 2A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure 2A, Table 1). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure 2B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure 2C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure 2C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure 2D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
+Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure 2 \@ref(fig:ch4fig2)A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Supplementary Figure \@ref(fig:figc2)A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure \@ref(fig:ch4fig2)A, Table \@ref(tab:ch4tab1)). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure \@ref(fig:ch4fig2)B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure \@ref(fig:ch4fig2)C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure \@ref(fig:ch4fig2)C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure \@ref(fig:ch4fig2)D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
 These findings support that tissue-specific clustering based on PCA can be a highly useful approach to identifying tissue-specific contamination.
 
 <!-- INSERT FIGURE 2 -->
 
-(ref:ch4fig2cap) Maternal contamination alters DNAm profiles of placental samples. A) Principal component analysis (PCA) using 2000 tissue-specific CpG sites resulted in PC1 being able to discriminate between placental and maternal tissue samples. B) Categorization of placental samples based on PC1. Samples with higher PC1 values were associated with higher P(outlier) values. C) A positive statistically significant relationship between P(outlier) and PC1 was observed (p<0.001) using linear regression (green). A non-linear fit is shown in blue. Samples with high PC1 but low P(outlier) are shown in red. D) Cell composition of dataset 11, estimated from DNAm-based placental cell deconvolution. The two outlier samples (red) with high PC1 values are shown having a high immune cell profile. nRBC: nucleated red blood cells, sd: standard deviation, MBD: maternal blood decidua dataset. 
+(ref:ch4fig2cap) Maternal contamination alters DNAm profiles of placental samples. A) Principal component analysis (PCA) using 2000 tissue-specific CpG sites resulted in PC1 being able to discriminate between placental and maternal tissue samples. B) Categorization of placental samples based on PC1. Samples with higher PC1 values were associated with higher P(outlier) values. C) A positive statistically significant relationship between P(outlier) and PC1 was observed (p\<0.001) using linear regression (green). A non-linear fit is shown in blue. Samples with high PC1 but low P(outlier) are shown in red. D) Cell composition of dataset 11, estimated from DNAm-based placental cell deconvolution. The two outlier samples (red) with high PC1 values are shown having a high immune cell profile. nRBC: nucleated red blood cells, sd: standard deviation, MBD: maternal blood decidua dataset.
 
 ```{r ch4fig2, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch4fig2cap)", fig.scap = "Maternal contamination alters DNAm profiles of placental samples", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch4', 'Figure 2.pdf'))
@@ -109,14 +103,14 @@ We found that P(outlier) and tissue-specific PCA were effective in identifying s
 We additionally explored other DNAm based variables that might be suggestive of contamination, such as epigenetic age and XY signal intensity analysis.
 For epigenetic age, we hypothesized that because of the large difference in epigenetic age between maternal (adult) and placental (fetal) tissue, epigenetic age of maternally contaminated placental samples should display increased epigenetic age estimates.
 We applied both adult and placental epigenetic age clocks on all placental chorionic villi samples [@horvath2013; @lee2019].
-Adult epigenetic age (EA) clock was not effective in accurately separating GA in placental samples (Supplementary Figure 3A).
-However, there was a small, but statistically significant association between adult EA and P(outlier) in chorionic villi samples (p \<0.01, slope = 0.0125 P(outlier) / year; Figure 3A), an effect that was largely driven by two datasets, 1 and 4 (Supplementary Figure 3B).
-Placental epigenetic gestational age (EGA), which was highly accurate on chorionic villi samples (mean difference = +1.07 weeks, sd = 0.88), yielded estimates of EGA that was not as high as expected for decidua (mean = 43.0 weeks) and maternal blood (mean = 44.2 weeks) samples, which indicated EGA might have low sensitivity for maternal contamination (Supplementary Figure 3C).
-The difference between EGA and reported was not significantly associated with P(outlier) (Figure 3B, slope = -0.002, n.s.).
+Adult epigenetic age (EA) clock was not effective in accurately separating GA in placental samples (Figure \@ref(fig:figc3)A).
+However, there was a small, but statistically significant association between adult EA and P(outlier) in chorionic villi samples (p \<0.01, slope = 0.0125 P(outlier) / year; Figure \@ref(fig:ch4fig3)A), an effect that was largely driven by two datasets, 1 and 4 (Figure \@ref(fig:figc3)B).
+Placental epigenetic gestational age (EGA), which was highly accurate on chorionic villi samples (mean difference = +1.07 weeks, sd = 0.88), yielded estimates of EGA that was not as high as expected for decidua (mean = 43.0 weeks) and maternal blood (mean = 44.2 weeks) samples, which indicated EGA might have low sensitivity for maternal contamination (Figure \@ref(fig:figc3)C).
+The difference between EGA and reported was not significantly associated with P(outlier) (Figure \@ref(fig:ch4fig3)B, slope = -0.002, n.s.).
 
 <!-- INSERT FIGURE 3 -->
 
-(ref:ch4fig3cap) Epigenetic age and XY signal intensity analysis. A) Adult epigenetic age on placental chorionic villi samples was associated with P(outlier) (p<0.01, slope = 0.013). B) The difference between placental epigenetic gestational age and reported gestational age was not significantly associated with P(outlier). C) Total XY signal intensity normalized to total autosomal signal intensity. Male samples (top left) deviations towards female samples (bottom right) are consistent with maternal contamination. D) Males flagged in XY intensity analysis have significantly (p<0.01) higher P(outlier) values than other placental villi samples. 
+(ref:ch4fig3cap) Epigenetic age and XY signal intensity analysis. A) Adult epigenetic age on placental chorionic villi samples was associated with P(outlier) (p\<0.01, slope = 0.013). B) The difference between placental epigenetic gestational age and reported gestational age was not significantly associated with P(outlier). C) Total XY signal intensity normalized to total autosomal signal intensity. Male samples (top left) deviations towards female samples (bottom right) are consistent with maternal contamination. D) Males flagged in XY intensity analysis have significantly (p\<0.01) higher P(outlier) values than other placental villi samples.
 
 ```{r ch4fig3, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch4fig3cap)", fig.scap = "Epigenetic age and XY signal intensity analysis", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch4', 'Figure 3.pdf'))
@@ -125,8 +119,8 @@ knitr::include_graphics(here::here('images', 'ch4', 'Figure 3.pdf'))
 A common approach to check for sample misannotation in DNAm analysis is to compare samples' recorded sex and overall signal intensity from the X and Y chromosome probes.
 Additionally, samples that deviate from the male and female sample clusters can be indicative of sample-sample contamination when the contaminant is of different sex.
 We hypothesized that maternal contamination could be detected in male pregnancies by XY signal intensity analysis.
-We examined XY signal intensity normalized to autosomal signal intensity using ewastools [@heiss2018], and found that 6 datasets had male samples that appear more female-like (trending towards the female cluster) (Figure 3C).
-Although the number of samples flagged in this analysis was small (17/754 males total), flagged samples had significantly increased P(outlier) (p \< 0.01, mean = 0.24 versus 0.04, Figure 3D), indicating this approach had high specificity but low sensitivity.
+We examined XY signal intensity normalized to autosomal signal intensity using ewastools [@heiss2018], and found that 6 datasets had male samples that appear more female-like (trending towards the female cluster) (Figure \@ref(fig:ch4fig3)C).
+Although the number of samples flagged in this analysis was small (17/754 males total), flagged samples had significantly increased P(outlier) (p \< 0.01, mean = 0.24 versus 0.04, Figure \@ref(fig:ch4fig3)D), indicating this approach had high specificity but low sensitivity.
 
 Maternal immune cells infiltration into placental tissues can occur in placental inflammatory conditions, such as chorioamnionitis [@cappelletti2020]. Moreover, a (small) proportion of the normal placental composition consists of maternal macrophages [@thomas2020]. In these cases, identified maternal genotype mixing might from variable amounts of maternal cells is a biological variable, not an unwanted technical artifact. To determine if contamination identified through our approaches were due to biological processes, we tested for the association between our contamination variables and available clinical and placental phenotypes. We were limited to sample variables made available on GEO, but in almost all cases we were able to test for the main phenotypes for each study (preeclampsia, acute chorioamnionitis, neural tube defects, assisted reproductive technologies). We found no statistically significant associations between placental phenotype and any of our measures of genetic and maternal contamination. P(outlier) was only significantly associated with late-onset preeclampsia samples in dataset 2 (p \< 0.05, slope = -0.0084), but not in any of the other 3 preeclampsia datasets. PC1, generated from our tissue-specific approach described above, was associated with early-onset preeclampsia (p\<0.001, slope = -0.0016), which does not necessarily indicate maternal cell presence given the large methylation alterations associated with severe preeclampsia [@wilson2018].
 Overall, we were unable to robustly detect the presence of maternal cells in placental samples due to biological processes, which might indicate our approaches to have inadequate sensitivity to detect the relatively small number of maternal cells that infiltrate due to inflammation.
