--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -16,28 +16,10 @@ Building on some of the existing bioinformatic approaches described above, we de
 
 ## Methods
 
-DNAm data was obtained from the data repository GEO for 13 placental studies, 3 of which were from our own lab (Table 1).
-These included studies of acute chorioamnionitis (dataset 1), preeclampsia (datasets 2, 3, 12, 13), neural tube defects (dataset 4), recurrent pregnancy loss (dataset 5), assisted reproductive technologies (dataset 6), early gestation (dataset 7, 10), neurobehavior of newborns (dataset 8), arsenic exposure (dataset 9), and extremely early gestation preterm birth (dataset 11).
-Decidua and maternal blood samples from additional dataset GSE74738 were included for methylome-wide principal components analysis (PCA).
-All studies had collected 1-4 sites of chorionic villi from the fetal facing side of the placenta, which is done to avoid contaminating maternal tissue.
-DNAm data was normalized with BMIQ and noob; and filtered for poor quality, cross-hybridizing, and probes with nearby SNPs according to the 2021 June 15th update of the original Zhou 2017 DNAm annotation [@zhou2017].
+DNAm data was obtained from the data repository GEO for 13 placental studies, 3 of which were from our own lab (Table \@ref(tab:ch4tab1)). These included studies of acute chorioamnionitis (dataset 1), preeclampsia (datasets 2, 3, 12, 13), neural tube defects (dataset 4), recurrent pregnancy loss (dataset 5), assisted reproductive technologies (dataset 6), early gestation (dataset 7, 10), neurobehavior of newborns (dataset 8), arsenic exposure (dataset 9), and extremely early gestation preterm birth (dataset 11). Decidua and maternal blood samples from additional dataset GSE74738 were included for methylome-wide principal components analysis (PCA). All studies had collected 1-4 sites of chorionic villi from the fetal facing side of the placenta, which is done to avoid contaminating maternal tissue. DNAm data was normalized with BMIQ and noob; and filtered for poor quality, cross-hybridizing, and probes with nearby SNPs according to the 2021 June 15th update of the original Zhou 2017 DNAm annotation [@zhou2017].
 
 ```{r echo=FALSE, results='asis'}
     options(knitr.kable.NA = '')
-```
-
-\captionsetup{width=6.5in}
-
-```{r ch4tab1, eval = T, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
-kableExtra::kbl(
-  readr::read_csv(here::here('Tables', 'ch4', 'table1.csv')) %>%
-    rename(` ` = 2,
-           `  ` = 3),
-  booktabs = TRUE,
-  caption = 'Placental datasets and number of samples with evidence of contamination.') %>%
-  
-  kableExtra::add_header_above(c(" " = 4, "Contamination measures (n samples)" = 4))%>%
-  kableExtra::kable_styling(full_width = TRUE)
 ```
 
 ### Identifying mixing of genetically distinct DNA samples
@@ -59,6 +41,22 @@ To estimate epigenetic age, placental and adult epigenetic age clocks were appli
 
 Placental samples from male fetuses that are contaminated with maternal (female) DNA, should appear more "female-like" when examining sex chromosome DNA methylation.
 Using the R package ewastools [@heiss2018], DNA methylation intensity measurements on X and Y chromosome probes were normalized to autosomal signal, and then outliers on X and Y chromosome plots were identified in a dataset-specific manner (termed "XY outliers").
+
+\captionsetup{width=6.5in}
+
+```{r ch4tab1, eval = T, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+kableExtra::kbl(
+  readr::read_csv(here::here('Tables', 'ch4', 'table1.csv')) %>%
+    rename(` ` = 2,
+           `  ` = 3),
+  booktabs = TRUE,
+  caption = 'Placental datasets and number of samples with evidence of contamination.') %>%
+  
+  kableExtra::add_header_above(c(" " = 4, "Contamination measures (n samples)" = 4))%>%
+  kableExtra::kable_styling(full_width = TRUE)
+```
+
+### 
 
 ### Microsatellite genotyping
 
@@ -88,7 +86,7 @@ kableExtra::kbl(
 
 To determine what proportion of high P(outlier) placental chorionic villi samples were contaminated with maternal cells, we performed several other analyses based on DNAm variation.
 
-Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure 2 \@ref(fig:ch4fig2)A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Supplementary Figure \@ref(fig:figc2)A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure \@ref(fig:ch4fig2)A, Table \@ref(tab:ch4tab1)). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure \@ref(fig:ch4fig2)B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure \@ref(fig:ch4fig2)C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure \@ref(fig:ch4fig2)C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure \@ref(fig:ch4fig2)D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
+Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure \@ref(fig:ch4fig2)A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Figure \@ref(fig:figc2)A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure \@ref(fig:ch4fig2)A, Table \@ref(tab:ch4tab1)). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure \@ref(fig:ch4fig2)B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure \@ref(fig:ch4fig2)C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure \@ref(fig:ch4fig2)C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure \@ref(fig:ch4fig2)D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
 These findings support that tissue-specific clustering based on PCA can be a highly useful approach to identifying tissue-specific contamination.
 
 <!-- INSERT FIGURE 2 -->
