Add ch 4 summary to discussion

--- a/References/references.bib
+++ b/References/references.bib
@@ -2072,3 +2072,17 @@ PMCID: PMC7177011}
 	doi = {10.1111/j.1469-7580.2011.01417.x},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3222839/pdf/joa0219-0601.pdf}
 }
+
+@article{morin2017a,
+	title = {Maternal blood contamination of collected cord blood can be identified using DNA methylation at three CpGs},
+	author = {{Morin}, {Alexander M.} and {Gatev}, {Evan} and {McEwen}, {Lisa M.} and {MacIsaac}, {Julia L.} and {Lin}, {David T. S.} and {Koen}, {Nastassja} and {Czamara}, {Darina} and {Räikkönen}, {Katri} and {Zar}, {Heather J.} and {Koenen}, {Karestan} and {Stein}, {Dan J.} and {Kobor}, {Michael S.} and {Jones}, {Meaghan J.}},
+	year = {2017},
+	date = {2017},
+	journal = {Clinical Epigenetics},
+	pages = {75},
+	volume = {9},
+	doi = {10.1186/s13148-017-0370-2},
+	note = {PMID: 28770015
+PMCID: PMC5526324},
+	langid = {eng}
+}
